--- a/docs/team/chrischenhui.adoc
+++ b/docs/team/chrischenhui.adoc
@@ -161,7 +161,7 @@ and design concepts such as _Observer Pattern_ and _MVC_ within _Cards_ and _Wor
 
 === Other contributions
 * *Code contributed*:
-** Overall: [https://github.com/AY1920S1-CS2103T-T11-2/main/commits?author=chrischenhui[All Commits]] [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=chrischenhui&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=chrischenhui&tabRepo=AY1920S1-CS2103T-T11-2%2Fmain%5Bmaster%5D[RepoSense]] [https://github.com/AY1920S1-CS2103T-T11-2/main/graphs/contributors?from=2016-08-07&to=2019-11-10&type=a[GitHub]]
+** Overall: [https://github.com/AY1920S1-CS2103T-T11-2/main/commits?author=chrischenhui[All Commits]] [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=chrischenhui&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=chrischenhui&tabRepo=AY1920S1-CS2103T-T11-2%2Fmain%5Bmaster%5D[RepoSense]] [https://github.com/AY1920S1-CS2103T-T11-2/main/graphs/contributors?from=2016-08-07&to=2019-11-12&type=a[GitHub]]
 ** Functional:
 *** WordBank: [https://github.com/AY1920S1-CS2103T-T11-2/main/tree/master/src/main/java/seedu/address/model/wordbank[WordBank]] [https://github.com/AY1920S1-CS2103T-T11-2/main/tree/master/src/main/java/seedu/address/model/wordbanklist[WordBankList]]
 *** Storage: [https://github.com/AY1920S1-CS2103T-T11-2/main/tree/master/src/main/java/seedu/address/storage/wordbanks[WordBank storage]]
@@ -222,7 +222,7 @@ include::../UserGuide.adoc[tag=chenhui-userRevisionBank]
 Below are the links to my other contributions in User Guide. Do visit them for a better understanding of the breadth and depth of my effort and contribution.
 ****
 
-* [https://ay1920s1-cs2103t-t11-2.github.io/main/UserGuide.html#card-commands-span-class-image-img-src-images-card_commands_icon-png-alt-card-commands-icon-width-29-5-span[Full documentation of Card commands]] [https://ay1920s1-cs2103t-t11-2.github.io/main/UserGuide.html#em-wordbank-em-commands-span-class-image-img-src-images-load_mode_icon-png-alt-load-width-22-span[Full documentation of WordBank commands]]
+* [https://ay1920s1-cs2103t-t11-2.github.io/main/UserGuide.html#em-card-em-commands-span-class-image-img-src-images-card_commands_icon-png-alt-card-commands-icon-width-29-5-span[Full documentation of _Card_ commands]] [https://ay1920s1-cs2103t-t11-2.github.io/main/UserGuide.html#em-wordbank-em-commands-span-class-image-img-src-images-load_mode_icon-png-alt-load-width-22-span[Full documentation of _WordBank_ commands]]
 * [https://ay1920s1-cs2103t-t11-2.github.io/main/UserGuide.html#command-summary[Full command summary]]
 
 //include::../UserGuide.adoc[tag=chenhui-quickstart]
@@ -247,7 +247,7 @@ Do visit them for a better understanding of the breadth and depth of my effort a
 
 include::../DeveloperGuide.adoc[tag=chenhui-wblStorageModel]
 
-* {empty} [https://ay1920s1-cs2103t-t11-2.github.io/main/DeveloperGuide.html#word-bank-s-data-structure-and-its-storage-system[Full documentation of _WordBank_'s data structure and its storage system]]
+* {empty} [https://ay1920s1-cs2103t-t11-2.github.io/main/DeveloperGuide.html#em-wordbank-em-s-data-structure-and-its-storage-system[Full documentation of _WordBank_'s data structure and its storage system]]
 
 ---
 
@@ -271,7 +271,8 @@ include::../DeveloperGuide.adoc[tag=chenhui-dragInWalkThrough]
 === Revision _WordBank_
 
 include::../DeveloperGuide.adoc[tag=chenhui-revisionBankActivityDiagram]
-{empty} [https://ay1920s1-cs2103t-t11-2.github.io/main/DeveloperGuide.html#revision-word-bank[Full documentation of Revision _WordBank_]]
+{empty} [https://ay1920s1-cs2103t-t11-2.github.io/main/DeveloperGuide.html#revision-em-wordbank-em[Full documentation of Revision _WordBank_]] +
+{empty} [https://ay1920s1-cs2103t-t11-2.github.io/main/DeveloperGuide.html#span-class-underline-em-wordbank-em-management-feature-span[Full documentation of entire _WordBank_ Management Feature]]
 
 ****
 * Below are the links to my other contributions in Developer Guide. Do visit them for a better understanding of the breadth and depth of my effort and contribution.
@@ -283,7 +284,6 @@ include::../DeveloperGuide.adoc[tag=chenhui-revisionBankActivityDiagram]
 //* {empty} [https://ay1920s1-cs2103t-t11-2.github.io/main/DeveloperGuide.html#Design-Storage[Storage]]
 //* {empty} [https://ay1920s1-cs2103t-t11-2.github.io/main/DeveloperGuide.html#user-commands[Detailed implementation for User Commands]]
 * {empty} [https://ay1920s1-cs2103t-t11-2.github.io/main/DeveloperGuide.html#design-considerations-4[Design considerations]]
-
 
 == image:bag-icon.png[width=35] More about me
 
